Bug 422325 - Newer KMail crashes with HTML Mail from DHL
Summary: Newer KMail crashes with HTML Mail from DHL
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.14.1
Platform: Manjaro Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-06-01 12:15 UTC by pierre_metzner
Modified: 2020-06-06 08:53 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Backtrace of Kubuntu 20.04 (32.97 KB, text/plain)
2020-06-05 06:03 UTC, pierre_metzner
Details

Note You need to log in before you can comment on or make changes to this bug.
Description pierre_metzner 2020-06-01 12:15:19 UTC
After receiving an e-mail from DHL, KMail crashes when I try to open the e-mail.
The e-mail is an HTML e-mail from DHL (German parcel service) with a return label (pdf file), a data matrix code (PNG file) and an Apple wallet (pkpass) as attachment.
The error output can be fond here:
https://forum.manjaro.org/t/kmail-20-04-crashes-when-i-change-to-the-inbox/139528

I copied the email from folder to /home/me/.local/share/akonadi_maildir_resource_0/inbox/ to a USB stick and tried to open it on my Laptop which runs KUbuntu 18.04. On my laptop the e-mail file could be opened without problems.

Now I update KUbuntu to Kubuntu 20.04 and the e-mail file doesn't open on my Laptop anymore.
So I believe that in the newer kmail version is a bug.

If necessary I can share the e-mail for analysis.

SOFTWARE/OS VERSIONS
Manjaro KDE stable 
KDE Plasma Version:  5.18.5
KDE Frameworks Version: 5.70.0
Qt Version: 5.14.2
Comment 1 Laurent Montel 2020-06-01 14:21:15 UTC
bactrace please
Comment 2 pierre_metzner 2020-06-02 16:30:40 UTC
How can I get a bactrace?

When I start KMail from commandline and try to open the described e-mail I get following output:

Error loading text-to-speech plug-in "flite"
qt.qpa.xcb: QXcbConnection: XCB error: 8 (BadMatch), sequence: 1686, resource id: 142606446, major code: 130 (Unknown), minor code: 3
qt.qpa.xcb: QXcbConnection: XCB error: 8 (BadMatch), sequence: 1689, resource id: 142606446, major code: 130 (Unknown), minor code: 3
qt.qpa.xcb: QXcbConnection: XCB error: 8 (BadMatch), sequence: 1692, resource id: 142606446, major code: 130 (Unknown), minor code: 3
qt.qpa.xcb: QXcbConnection: XCB error: 8 (BadMatch), sequence: 1699, resource id: 142606446, major code: 130 (Unknown), minor code: 3
qt.qpa.xcb: QXcbConnection: XCB error: 8 (BadMatch), sequence: 1733, resource id: 142606446, major code: 130 (Unknown), minor code: 3
qt.qpa.xcb: QXcbConnection: XCB error: 8 (BadMatch), sequence: 2102, resource id: 142606446, major code: 130 (Unknown), minor code: 3
qt.qpa.xcb: QXcbConnection: XCB error: 8 (BadMatch), sequence: 2116, resource id: 142606446, major code: 130 (Unknown), minor code: 3
qt.qpa.xcb: QXcbConnection: XCB error: 8 (BadMatch), sequence: 2119, resource id: 142606446, major code: 130 (Unknown), minor code: 3
*** KMail got signal 11 (Exiting)
*** Dead letters dumped.
/tmp/messageviewer_bFEFBE.index.1.6 was not removed .
/tmp/messageviewer_DvAwbS.index.4 was not removed .
/tmp/messageviewer_HUVkyV.index.1.5 was not removed .
/tmp/messageviewer_JMKJLS.index.1.2 was not removed .
/tmp/messageviewer_MhZXpv.index.3 was not removed .
/tmp/messageviewer_MqWiqg.index.1.3 was not removed .
/tmp/messageviewer_nCXRsW.index.2 was not removed .
/tmp/messageviewer_UWreGx.index.pkpass was not removed .
/tmp/messageviewer_VPJFMD.index.1.4 was not removed .
/tmp/messageviewer_bFEFBE.index.1.6 was removed .
/tmp/messageviewer_DvAwbS.index.4 was removed .
/tmp/messageviewer_HUVkyV.index.1.5 was removed .
/tmp/messageviewer_JMKJLS.index.1.2 was removed .
/tmp/messageviewer_MhZXpv.index.3 was removed .
/tmp/messageviewer_MqWiqg.index.1.3 was removed .
/tmp/messageviewer_nCXRsW.index.2 was removed .
/tmp/messageviewer_UWreGx.index.pkpass was removed .
/tmp/messageviewer_VPJFMD.index.1.4 was removed .
QSocketNotifier: Invalid socket 12 and type 'Read', disabling...
QSocketNotifier: Invalid socket 14 and type 'Read', disabling...
QSocketNotifier: Invalid socket 21 and type 'Read', disabling...
KCrash: crashing... crashRecursionCounter = 2
KCrash: Application Name = kmail path = /usr/bin pid = 2839
KCrash: Arguments: /usr/bin/kmail 
Speicherzugriffsfehler (Speicherabzug geschrieben)
Comment 4 pierre_metzner 2020-06-05 06:03:57 UTC
Created attachment 129060 [details]
Backtrace of Kubuntu 20.04

Because Kubuntu shows the same behaviour and it is easier to create the backtrace under Kubuntu I add here the corresponding backtrace of Kubuntu.
Comment 5 Christoph Feck 2020-06-05 19:04:36 UTC
Crashes in pkpass.
Comment 6 Volker Krause 2020-06-05 20:13:08 UTC
The backtrace doesn't have line numbers, so having the email causing this (or at least its pkpass attachment) would help a lot for reproducing this. Doesn't need to be shared publicly, you can sent it to me directly (vkrause@kde.org). Thanks!
Comment 7 Volker Krause 2020-06-06 08:04:32 UTC
Git commit 51be4d2a71be17f66a6535f8a414505457117939 by Volker Krause.
Committed on 06/06/2020 at 08:03.
Pushed by vkrause into branch 'release/20.04'.

Fix crash when encountering pkpass types we cannot render

M  +3    -0    plugins/messageviewer/bodypartformatter/pkpass/pkpass_plugin.cpp

https://invent.kde.org/pim/kdepim-addons/commit/51be4d2a71be17f66a6535f8a414505457117939
Comment 8 Volker Krause 2020-06-06 08:53:35 UTC
Git commit 1021bb61cd28b0b18594cfc1995a3ad10e9174ea by Volker Krause.
Committed on 06/06/2020 at 08:48.
Pushed by vkrause into branch 'master'.

Add support for displaying generic Apple Wallet passes

Found for example in some emails from DHL.

M  +1    -1    CMakeLists.txt
M  +9    -0    plugins/messageviewer/bodypartformatter/pkpass/pkpass_plugin.cpp
M  +1    -0    plugins/messageviewer/bodypartformatter/pkpass/templates.qrc
A  +96   -0    plugins/messageviewer/bodypartformatter/pkpass/templates/generic.html

https://invent.kde.org/pim/kdepim-addons/commit/1021bb61cd28b0b18594cfc1995a3ad10e9174ea