Fix crash when encountering pkpass types we cannot render

BUG: 422325